--- a/app/src/main/res/layout/activity_votings.xml
+++ b/app/src/main/res/layout/activity_votings.xml
@@ -19,9 +19,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- match-parent -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
-        android:layout_width="409dp"
+        android:layout_width="match_parent"
         android:layout_height="734dp"
         android:layout_marginTop="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
