--- a/app/src/main/res/layout/activity_voting_page.xml
+++ b/app/src/main/res/layout/activity_voting_page.xml
@@ -24,10 +24,13 @@
         android:id="@+id/textViewVotingInfo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+
         android:background="@color/blue"
         android:textColor="@android:color/white"
         android:textSize="20sp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="60dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -60,6 +63,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
+        android:layout_margin="10dp"
         app:layout_constraintBottom_toTopOf="@+id/buttonVote"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
