--- a/app/src/main/res/layout/activity_voting_page.xml
+++ b/app/src/main/res/layout/activity_voting_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/menu_background"
     tools:context=".VotingPage">
 
 
@@ -12,10 +12,10 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/votingpage"
-        android:textColor="@android:color/white"
-        android:textSize="32sp"
         android:layout_marginTop="20dp"
+        android:text="@string/votingpage"
+        android:textColor="@color/blue"
+        android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,12 +25,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
 
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="10dp"
         android:background="@color/blue"
         android:textColor="@android:color/white"
         android:textSize="20sp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginTop="60dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -39,9 +39,10 @@
         android:id="@+id/buttoncandidate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/becomecandidate"
-        android:background="@color/blue"
         android:layout_marginBottom="100dp"
+        android:background="@color/blue"
+        android:padding="10dp"
+        android:text="@string/becomecandidate"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,19 +52,20 @@
         android:id="@+id/buttonVote"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/vote"
-        android:background="@color/blue"
-        android:textColor="@android:color/white"
         android:layout_marginBottom="30dp"
+        android:background="@color/blue"
+        android:padding="10dp"
+        android:text="@string/vote"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/buttoncandidate"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:layout_margin="10dp"
+        android:id="@+id/recyclerView1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="15dp"
         app:layout_constraintBottom_toTopOf="@+id/buttonVote"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
