--- a/app/src/main/res/layout/activity_voting_page.xml
+++ b/app/src/main/res/layout/activity_voting_page.xml
@@ -36,13 +36,14 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <Button
-        android:id="@+id/buttoncandidate"
+        android:id="@+id/buttonCandidate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="100dp"
         android:background="@color/blue"
         android:padding="10dp"
         android:text="@string/becomecandidate"
+        android:onClick="onClickBeCandidate"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,8 +57,9 @@
         android:background="@color/blue"
         android:padding="10dp"
         android:text="@string/vote"
+        android:onClick="onClickVote"
         android:textColor="@android:color/white"
-        app:layout_constraintBottom_toTopOf="@+id/buttoncandidate"
+        app:layout_constraintBottom_toTopOf="@+id/buttonCandidate"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
